--- a/learningPlatformProject/learnApp/templates/learnApp/activity_component.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/activity_component.html
@@ -1,13 +1,25 @@
 <h3>Most recent updates:</h3>
+
 <hr>
+
 {% for message in workspace_messages%}
+
 <div>
-    <small><a href="{% url 'user_profile' message.user.id %}">@{{message.user}}</a> {{message.message_created|timesince}}</small>
-    <small>In "{{message.message_workspace}}"</small>
+
+    <small><a href="{% url 'user_profile' message.user.id %}"> @{{message.user}} </a> {{message.message_created|timesince}} ago, </small>
+    
+    <small> in <a href="{% url 'workspace_url' message.message_workspace.id %}"> "{{message.message_workspace}}" </a> </small>
+    
     <p>{{message}}</p>
+    
     {% if request.user == message.user%}
+
     <a href="{% url 'delete_message' message.id %}">Delete</a>
+
     {% endif %}
+    
     <hr>
+
 </div>
+
 {% endfor %}
