--- a/learningPlatformProject/templates/navbar.html
+++ b/learningPlatformProject/templates/navbar.html
@@ -9,7 +9,9 @@
 </form>
 
 {% if request.user.is_authenticated %}
-<p>Welcome {{request.user}}!</p>
+
+<p>Welcome <a href="{% url 'user_profile' request.user.id %}"> {{request.user}}! </a> </p>
+
 <a href="{% url 'logout' %}" >Logout</a>
 
 {% else %}
