--- a/learningPlatformProject/learnApp/templates/learnApp/profile.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/profile.html
@@ -9,7 +9,7 @@
     }
 </style>
 
-<h1>{{user.username}}</h1>
+<h1>{{user.username}}'s profile.</h1>
 
 <div class="profile-container">
 
@@ -20,7 +20,9 @@
     </div>
 
     <div>
-
+        <h3>Hosted workspaces:</h3>
+        <hr>
+        
         {% include 'learnApp/feed_component.html' %}
 
     </div>
