--- a/learningPlatformProject/learnApp/templates/learnApp/learnapp_workspace.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/learnapp_workspace.html
@@ -57,7 +57,7 @@
     </div>
 
     <div>
-        <h3>Learnee's:</h3>
+        <h3> {{lecturers.count}} learnee's here.</h3>
         <hr>
 
         {% for lecturer in lecturers%}
