--- a/learningPlatformProject/learnApp/templates/learnApp/workspace_form.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/workspace_form.html
@@ -4,7 +4,6 @@
 
 <div>
     <form method="POST" action="">
-
         {% csrf_token %}
 
         <!--
@@ -12,39 +11,31 @@
         -->
 
         <div>
-            
-            <label for="workspace_subject"> Workspace Subject </label>
-
-            <input type="text" name="subject" list="subject_list">
-            
+            <label for="workspace_subject"> Workspace Subject: </label>
+            <br>
+            <input required type="text" value="{{workspace.workspace_subject.subject_name}}" name="subject" list="subject_list">
             <datalist id="subject_list">
-
                 <select id="workspace_subject">
-                    
                     {% for subject in subjects %}
-
                     <option value="{{subject.subject_name}}">{{subject.subject_name}}</option>
-
                     {% endfor %}
-                    
                 </select>
-            
             </datalist>
-
         </div>
 
         <div>
             <label for="workspace_name"> Workspace Name </label>
+            <br>
             {{form.workspace_name}}
         </div>
 
         <div>
             <label for="workspace_description"> Workspace Description </label>
+            <br>
             {{form.workspace_description}}
         </div>
 
         <input type="Submit" value="Submit" />
-
     </form>
 </div>
 
