--- a/learningPlatformProject/learnApp/templates/learnApp/delete.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/delete.html
@@ -10,6 +10,8 @@
     
     <a href="{{request.META.HTTP_REFERER}}"> Go back </a>
     
+    &nbsp
+
     <input type="submit" value="Confirm" />
 
 </form>
