--- a/learningPlatformProject/templates/navbar.html
+++ b/learningPlatformProject/templates/navbar.html
@@ -1,6 +1,4 @@
-<a href="/">
-    <h1>Website Logo</h1>
-</a>
+<a href="/"> <h1>LearnApp</h1> </a>
 
 <form method="GET" action="{% url 'home_url' %}">
 
