--- a/learningPlatformProject/templates/navbar.html
+++ b/learningPlatformProject/templates/navbar.html
@@ -10,11 +10,15 @@
 
 <p>Welcome <a href="{% url 'user_profile' request.user.id %}"> {{request.user}}! </a> </p>
 
-<a href="{% url 'logout' %}" >Logout</a>
+<a href="{% url 'logout' %}" > Logout </a>
+
+&nbsp
+
+<a href="{% url 'update_user' %}"> Settings </a>
 
 {% else %}
 
-<a href="{% url 'login' %}" >Login</a>
+<a href="{% url 'login' %}" > Login </a>
 
 {% endif %}
 
