Add placeholder quiz html

--- a/learningPlatformProject/learnApp/templates/learnApp/feed_component.html
+++ b/learningPlatformProject/learnApp/templates/learnApp/feed_component.html
@@ -21,6 +21,8 @@
             <a href="{% url 'update_workspace' workspace.id %}"> Edit this workspace </a>
             &nbsp
             <a href="{% url 'delete_workspace' workspace.id %}"> Delete this workspace </a>
+            &nbsp
+            <a href="{% url 'view_quizzes' %}"> View quizzes </a>
 
             {% endif %}
             
